add partial to /rows
